# CityPulse

./: docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.dev  Insomnia_config.yaml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/images/sticker_bg/: .gitignore
backend/prisma/: promoteAdmin.ts  schema.prisma  seed.ts
backend/rust-modules/aaa/: .gitignore  Cargo.toml  compose_request.json  visible_stickers.json
backend/rust-modules/bgStickerWall/: .gitignore  Cargo.toml
backend/rust-modules/bgStickerWall/src/: helper.rs  main.rs  model.rs  processor.rs
backend/src/: app.ts
backend/src/config/: general.ts  limits.ts  swagger.ts
backend/src/controllers/: adminController.ts  authController.ts  categoryController.ts  eventController.ts  rsvpController.ts  userController.ts
backend/src/middleware/: authMiddleware.ts  rateLimiter.ts  roleMiddleware.ts
backend/src/routes/: adminRoutes.ts  authRoutes.ts  categoryRoutes.ts  eventRoutes.ts  otherRoutes.ts  rsvpRoutes.ts  userRoutes.ts
backend/src/services/: adminService.ts  authService.ts  categoryService.ts  eventService.ts  messageService.ts  rsvpService.ts  userService.ts
backend/src/utils/: ImageCache.ts  errorHandler.ts  logger.ts  profanityFilter.ts  secrets.ts  validators.ts
frontend/: .env  .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Blockquote.tsx  ClientsSection.tsx  DarkModeSwitch.tsx  DateRangePicker.tsx  EventCard.tsx  (+12 more)
(+57 files in other folders)
