[package]
name = "bg_sticker_wall"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.8"
imageproc = "0.25.0"
anyhow = "1.0"
env_logger = "0.11.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
actix-rt = "2.11.0"
lazy_static = "1.5.0"
